Bug Fix: open prompt shows on mobile

--- a/main.css
+++ b/main.css
@@ -262,6 +262,13 @@ body {
         visibility: hidden !important;
     }
 
+    @keyframes bounceIn {
+
+        100% {
+            visibility: hidden;
+        }
+    }
+
     .slider::-webkit-slider-thumb {
 
         width: 50px;
